i removed the Playfair-display folder, also replaced the github mark for one with a smaller size

--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<title>Document</title>
+	<title>Etch-a-Sketch</title>
 </head>
+
 <body>
+	<div id="heading-div">
+		<h1>Do you feel like drawing?</h1>
+	</div>
+	<div id="container-div">
+		<div id="screen-div"></div>
+		<div id="menu-div" class="right">
+
+			<div id="change-side-div">
+				<button class="btn" title="Change side"><img class="icon" src="./img/icons/change-arrows.svg" alt=""></button>
+			</div>
+			<div id="pencil-div">
+				<button class="btn" title="Gray Scale"><img class="icon" src="./img/icons/pencil.svg" alt=""></button>
+			</div>
+			<div id="colored-pencils-div">
+				<button class="btn" title="Aleatory raimbow colors"><img class="icon" src="./img/icons/colored-pencils.svg" alt=""></button>
+			</div>
+			<div id="color-picker-div">
+				<button class="btn" title="Pick your own color!"><img class="icon" src="./img/icons/color-picker.svg" alt=""></button>
+			</div>
+			<div id="pixels-div">
+				<button class="btn" title="Wanna more or less pixels?"><img class="icon" src="./img/icons/pixels.svg" alt=""></button>
+			</div>
+		</div>
+	</div>
+	<footer id="footer-div">
+		<div id="github-div">
+			<a href="https://github.com/AV-MMI/"><img src="./img/icons/GitHub-Mark-Light-32px.png" alt=""></a>
+		</div>
+	</footer>
 </body>
+
 <script src='./index.js'></script>
 </html>
